--- a/Thesis.bib
+++ b/Thesis.bib
@@ -650,6 +650,7 @@ $\bar{p}p$ collisions}",
                         the four-lepton channel in $pp$ collisions at center-of-mass
                         energies of 7 and 8 TeV with the ATLAS detector}",
       collaboration  = "ATLAS",
+      journal        = "",
       year           = "2014",
       eprint         = "1408.5191",
       archivePrefix  = "arXiv",
@@ -665,6 +666,7 @@ $\bar{p}p$ collisions}",
                         decay channel in $pp$ collisions at center-of-mass
                         energies of 7 and 8 TeV with the ATLAS detector}",
       collaboration  = "ATLAS",
+      journal        = "",
       year           = "2014",
       eprint         = "1408.7084",
       archivePrefix  = "arXiv",
@@ -737,13 +739,12 @@ to 10\fbinv of Data",
       reportNumber   = "FERMILAB-CONF-12-065-E"
 }
  
-@Book{bib:CPViolation,
+@article{bib:CPViolation,
   Author = {Michael Beyer},  
   Title = {CP Violation in Particle, Nuclear, and Astrophysics},
-  Series = {Lecture Notes in Physics},
-  Publisher = {Springer},
+  journal = "",
+  note = {Lecture Notes in Physics, Springer, ISBN 3-642-07830-3},
   Year = {2010},
-  Note = {ISBN 3-642-07830-3}
 }
 
 @Article{bib:Majorana,
@@ -2732,9 +2733,10 @@ primaryClass   = "hep-ph"
 
 @article{JOtt,
   author = "J.~Ott",
-  note = "private communication (2014)",
+  title = "",
+  note = "private communication",
   journal = "",
-  year = {}
+  year = {2014}
 }
 
 @misc{MSchrode,
@@ -3388,12 +3390,11 @@ author = "Matteo Cacciari and Gavin P. Salam"
       volume       = "\href{http://cdsweb.cern.ch/record/1627305}{CMS-DP-2013-033}",
 }
 
-@phdthesis{thesis:Schroeder,
+@article{thesis:Schroeder,
       author    = "M. Schr{\"o}der",
       title     = "Quality of Jet Measurements and Impact on a Search for New Physics at CMS",
-      school    = "Universit{\"a}t Hamburg",
-      address   = "Germany",
-      note      = "DESY-THESIS-2012-042",
+      journal   = "",
+      note      = "PhD thesis, Universit{\"a}t Hamburg, Germany, DESY-THESIS-2012-042",
       year      = "2012"
 }
 
@@ -3784,24 +3785,12 @@ author = "Matteo Cacciari and Gavin P. Salam"
       SLACcitation   = "%%CITATION = ARXIV:1106.1423;%%",
 }
 
-@book{GVK017474957,
-  added-at = {2009-08-21T09:46:50.000+0200},
-  address = {Philadelphia, Pa.},
-  author = {Efron, {Bradley}},
-  biburl = {http://www.bibsonomy.org/bibtex/276f11f1e9f3b99751acf8558e0ef6e58/fbw_hannover},
-  interhash = {1fc06c2784126911023c0681018f1a63},
-  intrahash = {76f11f1e9f3b99751acf8558e0ef6e58},
-  isbn = {0898711797},
-  keywords = {Resampling},
-  number = 38,
-  pagetotal = {VII, 91},
-  ppn_gvk = {017474957},
-  publisher = {Society for Industrial and Applied Mathematics},
-  series = {Regional Conference Series in Applied Mathematics},
-  timestamp = {2009-08-21T09:46:50.000+0200},
-  title = {The Jackknife, the bootstrap and other resampling plans},
-  url = {http://gso.gbv.de/DB=2.1/CMD?ACT=SRCHA&SRT=YOP&IKT=1016&TRM=ppn+017474957&sourceid=fbw_bibsonomy},
-  year = 1982
+@article{GVK017474957,
+  author = "B. Efron",
+  title  = "The Jackknife, the bootstrap and other resampling plans",
+  journal = "",
+  year = "1982",
+  note = "Number 38 in Regional Conference Series in Applied Mathematics, Society for Industrial and Applied Mathematics, Philadelphia"
 }
 
 @article{Rogan:2010kb,
@@ -3975,7 +3964,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
      author    = "Chatrchyan, Khachatryan and others",
      collaboration = "CMS",
      title     = "{Search for top-squark pair production in the
-                 single-lepton final state in pp collisions at $\sqrt{s} = 8$ TeV}",
+                 single-lepton final state in $pp$ collisions at $\sqrt{s} = 8$ TeV}",
      journal   = "Eur. Phys. J. C",
      volume    = "73",
      year      = "2013",
@@ -4154,7 +4143,6 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         variables in $pp$ collisions at $\sqrt{s}=7$ TeV}",
       collaboration  = "CMS",
       journal        = "Phys. Rev. Lett.",
-      number         = "8",
       volume         = "111",
       pages          = "081802",
       doi            = "10.1103/PhysRevLett.111.081802",
@@ -4206,16 +4194,14 @@ author = "Matteo Cacciari and Gavin P. Salam"
   doi={10.1088/1748-0221/3/08/S08001}
 }
 
-@book{Bruning:782076,
+@article{Bruning:782076,
       author       = {Br\"uning, Oliver Sim and Collier, Paul and Lebrun, P and
                       Myers, Stephen and Ostojic, Ranko and Poole, John and
                       Proudlock, Paul},
-      title        = "LHC Design Report",
-      publisher    = "CERN",
-      address      = "Geneva",
+      title        = "LHC Design Report: The LHC Main Ring",
+      journal      = "",
       year         = "2004",
       note         = "\href{http://cdsweb.cern.ch/record/782076}{CERN-2004-003-V-1}",
-      volume       = "1: The LHC Main Ring"
 }
 
 @inproceedings{ipac11:lamont,
@@ -4319,13 +4305,10 @@ author = "Matteo Cacciari and Gavin P. Salam"
       SLACcitation   = "%%CITATION = ARXIV:0911.4991;%%",
 }
 
-@book{bib:cmsptdr1,
+@article{bib:cmsptdr1,
  collaboration = {CMS},
  title = {CMS Detector Performance and Software},
- series = {CMS Physics Technical Design Report},
- volume = {1},
-      publisher    = "CERN",
-      address      = "Geneva",
+ journal = {Technical Design Report},
       year         = "2006",
       note         = "\href{http://cdsweb.cern.ch/record/922757}{CMS-TDR-008-1. CERN-LHCC-2006-001}",
 }
@@ -4425,13 +4408,10 @@ author = "Matteo Cacciari and Gavin P. Salam"
   note          = "\href{http://cdsweb.cern.ch/record/349375}{CMS-TDR-004. CERN-LHCC-97-033}"
 }
 
-@book{bib:cmstdr:tracker,
+@article{bib:cmstdr:tracker,
   collaboration = {CMS},
   title         = {The CMS tracker system project},
-  publisher     = {CERN},
-  volume        = {5},
-  address       = {Geneva},
-  series        = {Technical Design Report CMS},
+  journal        = {Technical Design Report},
   year          = {1997},
   note          = "\href{http://cdsweb.cern.ch/record/368412}{CMS-TDR-005. CERN-LHCC-98-006}"
 }
@@ -4916,7 +4896,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
 }
 
 @article{CMS-PAS-MUO-10-002,
-  author={CMS Collaboration},
+  author="{CMS Collaboration}",
   title={Performance of CMS muon reconstruction in $pp$ collision events at $\sqrt{s} = 7$ TeV},
   journal={JINST},
   volume={7},
@@ -5078,11 +5058,11 @@ author = {R.L. Gl\"uckstern}
   year = "2010"
 }
 
-@misc{CMS-JME-13-004,
+@article{CMS-JME-13-004,
       collaboration = {CMS},
       title         = "Jet energy calibration in the 8 TeV $pp$ data",
-      journal       = "CMS Physics Analysis Summary",
-      volume        = "CMS-PAS-JME-13-004",
+      journal       = "",
+      volume        = "",
       note          = "Paper in preparation, JME-13-004",
       year          = "2014",
 }
@@ -5685,17 +5665,20 @@ keywords = "Confidence level computation Poisson statistical"
       SLACcitation   = "%%CITATION = HEP-PH/9901246;%%",
 }
 
-@book{robert2001bayesian,
+@article{robert2001bayesian,
   title={The Bayesian Choice: From Decision-Theoretic Foundations to Computational Implementation (Springer Texts in Statistics)},
   author={Robert, Christian P},
+  journal="",
   year={2001},
-  publisher={Springer-Verlag New York}
+  note={Springer-Verlag New York}
 }
 
-@book{o2004bayesian,
+@article{o2004bayesian,
   title={Bayesian inference},
   author={O'Hagan, Anthony},
-  publisher={Number Vol. 2B in Kendall's Advanced Theory of Statistics. Edward Arnold, London 1994.}
+  journal = "",
+  note={Number Vol. 2B in Kendall's Advanced Theory of Statistics, Edward Arnold, London},
+  year = "1994"
 }
 
 @book{bib:NumRec,
