--- a/Thesis.tex
+++ b/Thesis.tex
@@ -235,10 +235,18 @@ a4paper
 \bibliographystyle{lucas_unsrt}
 \bibliography{Thesis}
 
+\cleardoublepage
+\thispagestyle{empty}
+\chapter*{~}
+\cleardoublepage
+\thispagestyle{empty}
+\chapter*{~}
+\input{Publications}
 
 \cleardoublepage
 \thispagestyle{empty}
 \chapter*{~}
+\input{Erklaerung}
 %\input{Danksagung.tex}
 
 
