--- a/Detector.tex
+++ b/Detector.tex
@@ -14,7 +14,7 @@ Before the protons are injected into the LHC, they are pre-accelerated in variou
   \label{fig:AccComplex}
 \end{figure}
 \\
-The main goal of the LHC is to provide proton-proton (\pp) collisions to the experiments with centre-of-mass energies up to 14\tev in order to explore physics processes at novel energy regimes. For a certain process, the expected number of events $N$ is given by the product of the cross section $\sigma$ and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time, such that
+The main goal of the LHC is to provide proton-proton collisions to the experiments with centre-of-mass energies up to 14\tev in order to explore physics processes at novel energy regimes. For a certain process, the expected number of events $N$ is given by the product of the cross section $\sigma$ and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time, such that
 \begin{equation}
   N = \sigma \cdot L . 
   \label{eq:lumi}
