--- a/RA2.tex
+++ b/RA2.tex
@@ -547,7 +547,7 @@ Overall, the application of the R+S method to predict the QCD background contrib
                 \includegraphics[width=0.49\textwidth]{figures/HTRA2_MC.pdf} &
                 \includegraphics[width=0.49\textwidth]{figures/NJetsRA2_MC.pdf}
   \end{tabular}
-  \caption{Prediction of QCD background on data compared to the expectation from data for a QCD enriched control region with \HT$>~1000~\rm{GeV}$, inverted $\Delta \phi$ cut, $\NJets \geq 3$ and $100 \leq \MHT \leq 200$\gev (\textit{upper row}) and selected QCD events in simulation compared to the total number of selected background events in simulation in the chosen control region (\textit{lower row}).}
+  \caption{Prediction of QCD background on data compared to the expectation from data for a QCD enriched control region with \HT$>~1000~\rm{GeV}$, inverted $\Delta \phi$ cut, $\NJets \geq 3$ and $100 \leq \MHT \leq 200$\gev (\textit{upper row}) and selected QCD events in simulation compared to the total number of selected background events in simulation in the same control region (\textit{lower row}).}
   \label{fig:qcd_rs_dataclosure}
 \end{figure}
 
