--- a/Thesis.tex
+++ b/Thesis.tex
@@ -77,6 +77,7 @@ a4paper
 \hyphenation{vor-ge-stel-lt}
 %\hyphenation{End-zu-st\"an-den}
 \hyphenation{si-mu-lier-ten}
+\hyphenation{fer-mi-ons}
 
 \input{definitions.tex}
 
@@ -105,13 +106,11 @@ a4paper
     \thispagestyle{empty}
     \vspace*{1cm}
     \begin{doublespace} 
-       \textbf{\Huge Probing supersymmetry} \\
-       \vskip0.4cm
-      % \textbf{\LARGE based on}
-      % \vskip0.4cm
-       \textbf{\Huge at the CMS experiment}
-       \vskip0.4cm
+       \textbf{\Huge Probing supersymmetry}
+       \vskip 0.4cm
        \textbf{\Huge based on precise jet measurements}
+       \vskip 0.4cm
+       \textbf{\Huge at the CMS experiment}
 %      \textbf{\LARGE Measurement of the}\\
 %      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
 %      \textbf{\LARGE and }\\
