--- a/Objects.tex
+++ b/Objects.tex
@@ -150,7 +150,7 @@ In order to determine the quality of a particular b-tagging algorithm, typically
 
 \section{Identification of Boosted t-Quark Jets }
 \label{sec:boosted_tops}
-Supersymmetric models or other scenarios describing physics beyond the Standard Model predict the extistence of new massive particles. Often, the coupling of these particles especially to quarks belonging to the third generation is sizeable, \eg in decays of top squarks which predominantly are expected to decay into top quarks. Consequently, such processes lead to highly-energetic top-quarks in the final state which can be identified exploiting the specific properties of the top-quark. 
+Supersymmetric models or other scenarios describing physics beyond the standard model predict the extistence of new massive particles. Often, the coupling of these particles especially to quarks belonging to the third generation is sizeable, \eg in decays of top squarks which predominantly are expected to decay into top quarks. Consequently, such processes lead to highly-energetic top-quarks in the final state which can be identified exploiting the specific properties of the top-quark. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
