--- a/RA2.tex
+++ b/RA2.tex
@@ -373,7 +373,7 @@ Furthermore, the kinematic fit allows to generate a seed sample from an inclusiv
 \label{subsubsec:qcd_smearing}
 The second step of the R+S method is the smearing procedure. Here, all jets of a seed event are smeared with the full jet response distributions including non-Gaussian tails. This means that for each event the magnitudes of the transverse momenta of the jets are scaled with a factor that is randomly obtained from the jet response distribution histogram of the respective $\pt$ and $|\eta|$ interval to model the reconstructed transverse momentum. These smeared events hence resemble the full QCD event kinematics and thus contributions from QCD events to the search regions can be estimated by imposing the respective selection cuts to the smeared events. \\
 However, this procedure typically results in predictions with large statistical uncertainties, since the probability that a seed event is smeared into the signal region is small. In order to obtain a more robust estimate of the prediction, each event is smeared not only once, but $N = 100$ times (bootstrap method). The mean of these $N$ predictions is considered as final result while the statistical uncertainty is obtained as the standard deviation of the mean estimate, \ie the standard deviation of the set of predictions divided by $1/\sqrt{N}$. This definition of the statistical uncertainty of the prediction ignores the statistical fluctuations of the seed sample. However, since the seed sample is very large, this uncertainty is negligible to good approximation. \\
-In order to validate the smearing procedure, generated QCD multijet events obtained from the \madgraph generator are smeared as described above and compared to fully simulated events at reconstruction level. This is performed on a sample with loose pre-selection at detector-level of $\NJets \ge 2$ and $\HT > 350$\gev.\footnote{The same pre-selection is applied to all simulated and data samples studied in this chapter. This does not bias the QCD prediction, since both cut values are sufficiently below the analysis selection criteria.} The result of this generator-jet smearing is shown in Fig.~\ref{fig:qcd_rs_genjets}. 
+In order to validate the smearing procedure, generated QCD multijet events obtained from the \madgraph generator are smeared as described above and compared to fully simulated events at reconstruction level. This is performed on a sample with loose preselection at detector-level of $\NJets \ge 2$ and $\HT > 350$\gev.\footnote{The same preselection is applied to all simulated and data samples studied in this chapter. This does not bias the QCD prediction, since both cut values are sufficiently below the analysis selection criteria.} The result of this generator-jet smearing is shown in Fig.~\ref{fig:qcd_rs_genjets}. 
 \begin{figure}[!t]
   \centering
 
@@ -787,7 +787,7 @@ Furthermore, studies using the $\sqrt{s} = 8$\tev data targeting the same simpli
 \end{figure}
 \\
 This comparison exhibits that the expected sensitivity to the models $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^0$ and $\tilde{q} \rightarrow q + \tilde{\chi}_1^0$ is similar for the different analyses. This is not unexpected as the compared analyses all make use of the all-hadronic final state. However, the analysis published in~\cite{CMS-PAS-SUS-13-019} performs better especially in case of squark production, as here also search regions based on dijet events are employed. \\
-Concerning gluino-mediated stop production it is interesting to note that the analysis presented in this thesis is also similarly sensitive to this model as other all-hadronic searches (\cf SUS-12-028, SUS-12-024 or SUS-13-019). These other hadronic analyses typically employ b-tagging information while the analysis presented in this thesis followed a complementary approach by employing high jet multiplicity search regions. However, the best sensitivity to this respective model is achieved by an analysis which is based on a single lepton, multiple jets and b-tags (SUS-13-007). 
+Concerning gluino-mediated top squark production it is interesting to note that the analysis presented in this thesis is also similarly sensitive to this model as other all-hadronic searches (\cf SUS-12-028, SUS-12-024 or SUS-13-019). These other hadronic analyses typically employ b-tagging information while the analysis presented in this thesis followed a complementary approach by employing high jet multiplicity search regions. However, the best sensitivity to this respective model is achieved by an analysis which is based on a single lepton, multiple jets and b-tags (SUS-13-007). 
 \\
 Comparable analyses have also been performed by the ATLAS experiment~\cite{Aad:2013wta, Aad:2014wea, Aad:2014lra} and the obtained exclusion limits on sparticle masses lie in a very similar mass region.
 
@@ -815,5 +815,5 @@ However, as discussed in Sec.~\ref{sec:susy}, especially the supersymmetric part
   \label{fig:8TeV_stop_limits}
 \end{figure}
 \\
-Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are often considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a stop mass up to around 1\tev is considered eligible and a wide range of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre-of-mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
-A feasibility study to search for direct stop quark pair-production at $\sqrt{s} = 13$\tev is presented in the next chapter based on simulated events,. Here, also techniques to identify boosted hadronically-decaying top quarks, as introduced in Chap.~\ref{chap:Objects}, emerging from the stop quark decays, are employed.
+Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are often considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a top squark mass up to around 1\tev is considered eligible and a wide range of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre-of-mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
+A feasibility study to search for direct top squark pair production at $\sqrt{s} = 13$\tev is presented in the next chapter based on simulated events,. Here, also techniques to identify boosted hadronically decaying top quarks, as introduced in Chap.~\ref{chap:Objects}, emerging from the top squark decays, are employed.
