--- a/Theory.tex
+++ b/Theory.tex
@@ -191,9 +191,9 @@ As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of sp
 \begin{equation*}
 m_{h^0} \lesssim 135 \gev \; .
 \end{equation*}
-Consequently, significant contributions from the stop quark mass are required to push the mass of the lightest Higgs boson up to a value of around 125\gev. This is somewhat in tension to the requirement of having a stop quark mass close to the top mass in order to solve the hierarchy problem. However, it is still possible to accommodate a Higgs mass of 125\gev without the necessity to decouple the stop quark or add new dynamics to the MSSM. These scenarios are referred to as \textit{maximal mixing}~\cite{Djouadi:2005gj}. \\
+Consequently, significant contributions from the top squark mass are required to push the mass of the lightest Higgs boson up to a value of around 125\gev. This is somewhat in tension to the requirement of having a top squark mass close to the top mass in order to solve the hierarchy problem. However, it is still possible to accommodate a Higgs mass of 125\gev without the necessity to decouple the top squark or add new dynamics to the MSSM. These scenarios are referred to as \textit{maximal mixing}~\cite{Djouadi:2005gj}. \\
 Similar to the SM, the gauge eigenstates of the SUSY theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates called \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. \\
-In order to obtain a natural realization of the MSSM, it is important that certain particles have a particular mass scale~\cite{Craig:2013cxa}. Especially the superpartner of the top quark is expected to be not too heavy in order to be able to cancel the contributions from top loops to the Higgs mass. These give typically the largest contributions since the top quark is the heaviest particle in the SM. Assuming a maximal accepted fine-tuning of $\Delta \lesssim 10$, the stop mass is supposed to be around 400\gev. Given these conditions, also light higgsinos are expected with a typical mass scale around 200\gev. Since gluinos yield loop corrections to the stop mass, they are expected to not significantly exceed the 1\tev range as a second order effect. 
+In order to obtain a natural realization of the MSSM, it is important that certain particles have a particular mass scale~\cite{Craig:2013cxa}. Especially the superpartner of the top quark is expected to be not too heavy in order to be able to cancel the contributions from top loops to the Higgs mass. These give typically the largest contributions since the top quark is the heaviest particle in the SM. Assuming a maximal accepted fine-tuning of $\Delta \lesssim 10$, the top squark mass is supposed to be around 400\gev. Given these conditions, also light higgsinos are expected with a typical mass scale around 200\gev. Since gluinos yield loop corrections to the top squark mass, they are expected to not significantly exceed the 1\tev range as a second order effect. 
 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
@@ -273,7 +273,7 @@ Most recent SUSY cross section calculations consider higher order corrections, c
 \subsubsection*{Decay Channels}
 \label{subsubsec:susy_decay}
 In addition to various different production channels, also the decay of supersymmetric particles offers a rich variety of different modes depending on the specific mass hierarchy. In Fig.~\ref{fig:susy_decay}, some example diagrams for possible decay modes of squarks and gluinos are illustrated. Here, the three-body decays of the gluinos in the upper two diagrams denote effective couplings. These occur in case squark masses are decoupled from the rest of the particle spectrum, \ie that their masses are significantly larger than that of the gluinos. \\
-Gluinos decay preferrably into the LSP and a quark pair. This quark pair can for instance either be a pair of light-flavour quarks or a pair of top quarks. The latter represents the case of gluino-mediated stop production. In case of squarks, a preferred decay to the LSP and one quark is expected. While a light-flavour quark is expected from the decay of a light-flavour squark, the final state of direct production of stop quarks is made up of the LSP and a top quark.\\
+Gluinos decay preferrably into the LSP and a quark pair. This quark pair can for instance either be a pair of light-flavour quarks or a pair of top quarks. The latter represents the case of gluino-mediated top squark production. In case of squarks, a preferred decay to the LSP and one quark is expected. While a light-flavour quark is expected from the decay of a light-flavour squark, the final state of direct production of top squarks is made up of the LSP and a top quark.\\
 In all such cases, a multijet final state accompanied by missing transverse momentum with no isolated leptons is expected as experimental signature.\footnote{In general, final state topologies including leptons can occur as well, for instance in cascade decays or semi-leptonic decays of final state top quarks. However, since the analyses presented in this thesis concentrate on all-jet final states, final states including leptons are not discussed.}  
 \begin{figure}[!t]
   \centering
