--- a/Theory.tex
+++ b/Theory.tex
@@ -7,7 +7,7 @@ The SM comprises the elementary particles and their interactions~\cite{Agashe:20
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
-    \includegraphics[width=0.85\textwidth]{figures/SM.jpg}
+    \includegraphics[width=0.85\textwidth]{figures/StandardModell.pdf}
   \end{tabular}
   \caption{Overview of particles contained in the standard model. Blue lines indicate interactions between different particles.}
   \label{fig:SM}
@@ -132,7 +132,7 @@ A $R$-parity conserving supersymmetric theory provides some elegant solutions to
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.55\textwidth]{figures/Couplings.jpg}
+    \includegraphics[width=0.55\textwidth]{figures/unification.png}
   \end{tabular}
   \caption{Comparison of the renormalization group evolution of the couplings $\alpha_{a}^{-1}$ in the SM (dashed lines) and the MSSM (solid lines) including two-loop effects. The masses of the supersymmetric particles in the MSSM are considered as a common threshold changing between 500\gev and 1.5\tev while the strong coupling constant $\alpha_{3}(m_{Z})$ is varied between 0.117 and 0.121. Taken from~\cite{Martin:1997ns}.}
   \label{fig:couplings}
@@ -149,7 +149,7 @@ One example is the Veltman definition of naturalness~\cite{veltman1981infrared}.
 \begin{equation}
 \left| \frac{\lambda_0}{m^2}\frac{\partial m^2}{\partial \lambda_0} \right| < \Delta \; .
 \end{equation}
-While the value of $\Delta$ has been set to $\sim10$ in the past, it increased over the years such that also values of $\sim100$ or even $\sim1000$ are often considered as reasonable values~\cite{Craig:2013cxa}. \\
+While the value of $\Delta$ has been set to $\sim10$ in the past, it was increased over the years such that also values of $\sim100$ or even $\sim1000$ are often considered as acceptable values~\cite{Craig:2013cxa}. \\
 Such conditions can be used in order to derive constraints on the spectrum of superpartners which regulate the hierarchy problem. Here, it turns out that not all sparticles are equally important and thus not all have to be situated at the same mass scale. Some typical mass ranges for sparticles considered as natural are given in Sec.~\ref{subsec:mssm}. 
 
 \subsection{The MSSM}
@@ -320,7 +320,7 @@ Thus, results of SUSY searches are, in addition to interpretations in the CMSSM,
   \label{fig:SMS_7TeV}
 \end{figure}
  \\
-However, interpretations in simplified models typically target only well-defined isolated SUSY topologies and thus do not account for all possible decay patterns in the MSSM. Consequently, also interpretations in more general models are desirable. One such example of a more generic SUSY model is the pMSSM~\cite{Djouadi:1998di}. The pMSSM is a 19-parameter realization of the MSSM and captures most of the features of general $R$-parity conserving SUSY models and covers a wide diversity of possible SUSY topologies. The MSSM is constrained by assuming that there is no new source of $CP$-violation, that no flavour changing neutral currents occur and that the first two sfermion generations are degenerate. Interpretations of CMS SUSY searches performed at $\sqrt{s} = 7$\tev within the pMSSM are published in~\cite{CMS-PAS-SUS-12-030}. A discussion of updated results follows in Sec.~\ref{sec:susy_status}.
+However, interpretations in simplified models typically target only well-defined isolated SUSY topologies and thus, like the CMSSM, do also not account for all possible decay patterns in the MSSM. Consequently, also interpretations in more general models are desirable. One such example of a more generic SUSY model is the pMSSM~\cite{Djouadi:1998di}. The pMSSM is a 19-parameter realization of the MSSM and captures most of the features of general $R$-parity conserving SUSY models and covers a wide diversity of possible SUSY topologies. The MSSM is constrained by assuming that there is no new source of $CP$-violation, that no flavour changing neutral currents occur and that the first two sfermion generations are degenerate. Interpretations of CMS SUSY searches performed at $\sqrt{s} = 7$\tev within the pMSSM are published in~\cite{CMS-PAS-SUS-12-030}. A discussion of updated results follows in Sec.~\ref{sec:susy_status}.
 \\
 Although the SUSY parameter space has been investigated already extensively with the LHC data obtained at $\sqrt{s} = 7$\tev and exclusion limits on sparticle masses enter the TeV range, searches for supersymmetry stay a very important field within the CMS experiment also for $\sqrt{s} = 8$\tev. As seen already in Fig.~\ref{fig:susy_cross_sec}, production cross sections are expected to largely increase for increasing centre-of-mass energies. In particular, gluino and light-flavour squark production cross sections profit a lot from the collider energy increase such that a new parameter space is accessible. Thus, in particular searches for those sparticles based on final states containing several hard jets and high values of missing transverse momentum are of major interest for analyses of the LHC $\sqrt{s} = 8$\tev data.   
 
